# AI-turtlebot

./: CMakeLists.txt  CMakeLists.txt~  Link to recognize  README.md  package.xml  package.xml~
launch/: keyboard_teleop.launch  recognize.launch  recognize.launch~
resources/: CLASSES.pkl  NEWOLDDATA.pkl
scripts/: App.py  App.py~  recognize  recognize.py~  recognize~
scripts/old/: recognize  recognize_old
