<package>
  <name>recognize</name>
  <version>2.2.5</version>
  <description>recognize a series of objects</description>
  <maintainer email="mwise@willowgarage.com">Melonee Wise</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/turtlebot_teleop</url>
  <url type="repository">https://github.com/turtlebot/turtlebot_apps</url>
  <url type="bugtracker">https://github.com/turtlebot/turtlebot_apps/issues</url>
  
  <author email="mwise@willowgarage.com">Melonee Wise</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>turtlebot_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
 
  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>turtlebot_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>kobuki_safety_controller</run_depend>
  <run_depend>yocs_velocity_smoother</run_depend>
  <run_depend>turtlebot_bringup</run_depend>
  <run_depend>pcl_ros</run_depend>
</package>
